--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,6 @@
 $backgroundColor: #000;
 $bodyColor: #fff;
-$menuBgColor: #eee;
+$menuBgColor: #444;
 $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 $menuHeight: 1.5em;
 $footerHeight: 55px;
@@ -32,40 +32,45 @@ body {
     }
 }
 
-.main-menu {
-    text-align: center;
+div.ui.menu.main-menu {
+    /* text-align: center; */
     margin: 2em 0em;
     margin-top: 0em;
     padding: $menuHeight;
-
     background-color: $menuBgColor;
-    font-size: 1.5em;
 
-    @media screen and (max-width: 765px) {
-        font-size: 0.7em;
-        padding: $menuHeight / 2;
-        margin-top: 1em;
-        margin-bottom: 3em;
+    /* background-color: $menuBgColor; */
+    /* font-size: 1.5em; */
 
-    }
+    /* @media screen and (max-width: 765px) { */
+    /*     font-size: 0.7em; */
+    /*     padding: $menuHeight / 2; */
+    /*     margin-top: 1em; */
+    /*     margin-bottom: 3em; */
 
-    a {
-        padding: $menuHeight;
-        margin: 1em;
+    /* } */
 
-        color: black;
-        text-decoration: none;
-        text-transform: Capitalize;
+    /* a { */
+    /*     padding: $menuHeight; */
+    /*     margin: 1em; */
 
-        transition-duration: 0.2s;
-    }
+    /*     color: black; */
+    /*     text-decoration: none; */
+    /*     text-transform: Capitalize; */
 
-    &:not(:hover) > a.current, a:hover, a:active {
-        margin: -1em;
-        padding: ($menuHeight * 1.25) ($menuHeight * 2);
+    /*     transition-duration: 0.2s; */
+    /* } */
 
-        background-color: rgb(255, 255, 128);
-        box-shadow: 0 0 3px black;
+    /* &:not(:hover) > a.current, a:hover, a:active { */
+    /*     margin: -1em; */
+    /*     padding: ($menuHeight * 1.25) ($menuHeight * 2); */
+
+    /*     background-color: rgb(255, 255, 128); */
+    /*     box-shadow: 0 0 3px black; */
+    /* } */
+    & > .main-menu-inner {
+        background-color: transparent;
+        border: none;
     }
 }
 
