More work on the subcategories

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<a class="ui massive icon button back-to-portfolio-link" href="{{ "/portfolio" | relative_url }}"><i class="left arrow icon"></i></a>
+<a class="ui massive icon button back-to-portfolio-link" href="{{ ".." }}"><i class="left arrow icon"></i></a>
 
 <h1 class="ui huge inverted header">{{ page.title }}</h1>
 {{content}}
