--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
                 <a class="ui right item"></a>
                 {% for menu_page in site.pages %}
                     {% if menu_page.menu_item %}
-                <a href="{{ menu_page.url | relative_url }}" class="ui item {% if menu_page.url == page.url or page.categories[0] == menu_page.menu_item %}active{% endif %}">{{ menu_page.menu_item }}</a>
+                <a href="{{ menu_page.permalink | relative_url }}" class="ui item {% if menu_page.permalink == page.url or page.categories[0] == menu_page.menu_item %}active{% endif %}">{{ menu_page.menu_item }}</a>
                     {% endif %}
                 {% endfor %}
                 </nav>
