--- a/_includes/list_portfolio_items.html
+++ b/_includes/list_portfolio_items.html
@@ -1,10 +1,10 @@
 <div class="ui three column stackable doubling centered grid portfolio">
     {% for item in include.collection %}
-    {% if item.url contains "index" %}
-    {% else %}
+    {% assign url_parts = item.url | split: "/" %}
+    {% unless url_parts.last contains "index" %}
     <a href="{{ item.url | relative_url }}/" class="ui column portfolio-item">
         <img class="ui fluid rounded image" alt="{{ item.title }}" title="{{ item.name }}" src="{{ item.preview_image_url | relative_url }}"/>
     </a>
-    {% endif %}
+    {% endunless %}
     {% endfor %}
 </div>
