--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,25 +21,30 @@
                 </a>
                 <a class="ui right item"></a>
                 {% assign page_url_segments = page.url | split: "/" %}
-                {% for menu_page in site.pages %}
-                    {% if menu_page.menu_item %}
-                <div  class="ui simple dropdown item {% if menu_page.permalink == page.url or page.categories[0] == menu_page.menu_item or page_url_segments contains menu_page.basename %}active{% endif %}">
-                    <a href="{{ menu_page.permalink | relative_url }}">
-                        {{ menu_page.menu_item }}
-                    </a>
-                    <div class="menu dropdown-menu">
-                        <div class="item">Choice 1</div>
-                        <div class="item">Choice 2</div>
-                        <div class="item">Choice 3</div>
+                {% for menu_page in site.menu_dropdown %}
+                    <div  class="ui simple dropdown item {% if menu_page.url == page.url or page.url contains menu_page.url %}active{% endif %}">
+                        <a href="{{ menu_page.url | relative_url }}">
+                            {{ menu_page.name }}
+                        </a>
+                        <div class="menu dropdown-menu">
+                            <!-- <div class="item">Choice 1</div>
+                                 <div class="item">Choice 2</div>
+                                 <div class="item">Choice 3</div> -->
+                            {% for dropdown_page in menu_page.items %}
+                                <a href="{{ dropdown_page.url }}" class="item {% if dropdown_page.url == page.url or page.url contains dropdown_page.url %}active{% endif %}">
+                                    {{ dropdown_page.name }}
+                                </a>
+                            {% endfor %}
+                        </div>
                     </div>
-                </div>
-                    {% endif %}
                 {% endfor %}
                 </nav>
             </div>
 
             <div class="content-wrapper">
                 <div class="ui container">
+                    <h1 class="ui huge inverted header">{{ page.title }}</h1>
+
                     {{ content}}
                 </div>
             </div>
