--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
                         <a href="{{ menu_page.url | relative_url }}">
                             {{ menu_page.name }}
                         </a>
-                        <div class="menu dropdown-menu">
+                        <div class="ui inverted secondary vertical pointing menu dropdown-menu">
                             <!-- <div class="item">Choice 1</div>
                                  <div class="item">Choice 2</div>
                                  <div class="item">Choice 3</div> -->
