Slant home page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
                  </h1> -->
 
             <div class="main-menu ui large inverted stackable menu">
-                <nav class="main-menu-inner ui container stackable huge inverted secondary pointing menu">
-                <a href="/" class="ui item {% if page.url == "/" %}active{% endif %}">
+                <nav class="main-menu-inner ui container huge inverted secondary pointing menu">
+                <a href="/" class="ui brand item {% if page.url == "/" %}active{% endif %}">
                     {{ site.title }}
                 </a>
                 <a class="ui right item"></a>
