--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,7 +8,7 @@ layout: default
     </div>
     <div class="six wide column" markdown="1">
 
-        <img class="ui centered rounded image" src="{{site.portrait_picture_path}}" alt="Joanne Rigterink" title="Joanne Rigterink"/>
+        <img class="ui centered rounded image" src="{{site.portrait_picture_path}}" alt="Jelte Klas Wijnja" title="Joanne Rigterink"/>
 
         <div class="social-media-icons below-portrait-image">
             {% for item in site.data.social_media %}
