--- a/_includes/list_portfolio_items.html
+++ b/_includes/list_portfolio_items.html
@@ -3,7 +3,7 @@
     {% for item in items %}
     {% assign url_parts = item.url | split: "/" %}
     {% unless url_parts.last contains "index" %}
-    <a href="{{ item.url | relative_url }}/" class="ui column portfolio-item">
+    <a href="{{ item.url | relative_url }}" class="ui column portfolio-item">
         <img class="ui fluid rounded image" alt="{{ item.title }}" title="{{ item.name }}" src="{{ item.preview_image_url | relative_url }}"/>
     </a>
     {% endunless %}
