--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -217,11 +217,12 @@ footer {
         margin-bottom: 1em;
         transition-duration: 0.2s;
         position: relative;
-        background-color: transparent;
+        background-color: #444;
         box-shadow: none;
 
         &:hover {
-            background-color: transparent;
+            /* background-color: transparent; */
+            background-color: #444;
             box-shadow: none;
 
             transform: translateY(-5px);
