--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
     <head>
+      ##enable tracking:
+      <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101276581);</script>
+<script async src="//static.getclicky.com/js"></script>
+
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <title>{{ site.title }}{% if page.title != "" %} • {{ page.title }} {% endif %}</title>
